--- a/portfolio/templates/pages/home.html
+++ b/portfolio/templates/pages/home.html
@@ -1,3 +1,7 @@
 {% extends "base.html" %}
-
-
+<div class="container">
+    <div class="text-center">
+        <h1>Fullstack Web Developer</h1>
+        <p>Max Nölp</p>
+    </div>
+</div>
