--- a/portfolio/templates/base.html
+++ b/portfolio/templates/base.html
@@ -21,6 +21,7 @@
   <link rel="icon" href="{% static 'images/favicons/favicon.ico' %}" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+  <link rel="stylesheet" href="{% static 'css/project.css' %}">
 
   {% block css %}
 <!-- Your stuff: Third-party CSS libraries go here -->
@@ -54,7 +55,7 @@
   <div class="sticky-top">
     {% include "navbar.html" %}
   </div>
-  <div class="container">
+  <div class="container position-relative">
     {% if messages %}
       {% for message in messages %}
         <div class="alert alert-dismissible {% if message.tags %}alert-{{ message.tags }}{% endif %}">
@@ -68,7 +69,6 @@
     {% endif %}
     {% block main %}
       {% block content %}
-        
       {% endblock content %}
     {% endblock main %}
 
